src/sass/main.sass
.container
    width: 100vw
    height: 100vh
    display: flex
    justify-content: center
    align-items: center


.circle-selector
    position: relative
    width: 800px
    height: 800px
    display: flex
    justify-content: center
    align-items: center
    &__activator
        position: absolute
        z-index: 1000
        background: rgba(0,0,0,0.4)
        display: flex
        justify-content: center
        align-items: center
        color: #fff
    &__element
        border-radius: 50%
        position: absolute
        object-fit: cover
        img
            width: 100%
            height: 100%
            border-radius: 3%
        &:hover
            cursor: pointer
    &__activator, &__element
        width: 140px
        height: 200px

@media(max-width: 1200px)
    .circle-selector
        width: 600px
        height: 600px
        &__activator, &__element
            width: 19.83%
            height: 28.33%


@media(max-width: 992px)
    .circle-selector
        width: 500px
        height: 500px
        &__activator, &__element
            width: 21%
            height: 30%
        


@media(max-width: 768px)
    .circle-selector
        width: 350px
        height: 350px
        &__activator, &__element
            width: 20%
            height: 28.57%
        


@media(max-width: 576px)
    .circle-selector
        width: 300px
        height: 300px
        &__activator, &__element
            width: 16.33%
            height: 23.33%
        
        

